Add support to retrieve current user session
Signed-off-by: Calin Neamtu <nilac8991@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url = "https://zebratech.jfrog.io/artifactory/EMDK-Android/"
+        }
+        maven { url 'https://jitpack.io' }
     }
 }
 
