--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
+    // EMDK Loader
+    implementation 'com.github.nilac8991:emdk-loader-lib:1.0.8'
+
+    // EMDK
+    implementation 'com.symbol:emdk:11.0.134'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
