Add support to launch new authentication requests for users
Signed-off-by: Calin Neamtu <nilac8991@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IdentityGuardianPlayground"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.IdentityGuardianPlayground">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,6 +28,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".UserAuthenticationActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
