--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,28 @@
         </activity>
 
         <activity
+            android:name=".ui.ms.MSSignInActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity" />
+
+        <activity
+            android:name="com.microsoft.identity.client.BrowserTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="msauth"
+                    android:host="${msAuthHost}"
+                    android:path="${msAuthPath}" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".ui.auth.UserAuthenticationActivity"
             android:exported="false"
             android:screenOrientation="portrait"
