--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,9 @@ dependencyResolutionManagement {
             url = "https://zebratech.jfrog.io/artifactory/EMDK-Android/"
         }
         maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://pkgs.dev.azure.com/MicrosoftDeviceSDK/DuoSDK-Public/_packaging/Duo-SDK-Feed/maven/v1'
+        }
     }
 }
 
